// Vitest Snapshot v1

exports[`init > should keep provider if isReady resolved in 3s 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "foo": "bar",
      },
      {
        "properties": {
          "foo": "bar",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`init > should keep provider if isReady resolved in 3s 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "foo": "bar",
      },
      {
        "properties": {
          "foo": "bar",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`init > should remove provider if isReady throw error 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "foo": "bar",
      },
      {
        "properties": {
          "foo": "bar",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`init > should remove provider if isReady timeout (3s) 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "foo": "bar",
      },
      {
        "properties": {
          "foo": "bar",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`track > sessionProperties > should clear sessionProperties after call clearSessionProperties 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "productId": "1",
        "userId": "2",
      },
      {
        "properties": {
          "productId": "1",
        },
        "sessionProperties": {
          "userId": "2",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`track > sessionProperties > should clear sessionProperties after call clearSessionProperties 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "productId": "1",
        "userId": "2",
      },
      {
        "properties": {
          "productId": "1",
        },
        "sessionProperties": {
          "userId": "2",
        },
      },
      {},
    ],
    [
      "test",
      {
        "productId": "2",
      },
      {
        "properties": {
          "productId": "2",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`track > sessionProperties > should store sessionProperties in tracker and merge properties 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "productId": "1",
        "userId": "2",
      },
      {
        "properties": {
          "productId": "1",
        },
        "sessionProperties": {
          "userId": "2",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`track > sessionProperties > should store sessionProperties in tracker and merge properties 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "productId": "1",
        "userId": "2",
      },
      {
        "properties": {
          "productId": "1",
        },
        "sessionProperties": {
          "userId": "2",
        },
      },
      {},
    ],
    [
      "test",
      {
        "productId": "2",
        "userId": "2",
      },
      {
        "properties": {
          "productId": "2",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`track > should call every providers' track methods 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "foo": "bar",
      },
      {
        "properties": {
          "foo": "bar",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`track > should call every providers' track methods 2`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "foo": "bar",
      },
      {
        "properties": {
          "foo": "bar",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`track > should not call track method of provider which not specified in trackerOptions.includes 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "test",
      {
        "foo": "bar",
      },
      {
        "includes": {
          "bar": true,
        },
        "properties": {
          "foo": "bar",
        },
      },
      {},
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
